Prevent broken layout when narrowing browser width
Jira: WLP-745

--- a/public/scss/layouts/_default.scss
+++ b/public/scss/layouts/_default.scss
@@ -4,14 +4,14 @@ html, body {
 }
 
 body {
-  // min-width: 1024px;
+  min-width: 1400px;
   // min-height: 768px;
   // background-color: $body-bg-color;
   $arguments: $body-bg-color-1, $body-bg-color-2;
   @include linear-gradient($arguments);
 }
 
-.public-container{
+.public-container {
   height: 100%;
   display: flex;
   align-items: center;
